--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PontoEletronico
 endorsed.classpath=
 excludes=
+file.reference.mssql-jdbc-12.2.0.jre11.jar=/home/gbarrosn/NetBeansProjects/RecepcaoSAD/src/libs/mssql-jdbc-12.2.0.jre11.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
