--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PontoEletronico
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-12.2.0.jre11.jar=/home/gbarrosn/NetBeansProjects/RecepcaoSAD/src/libs/mssql-jdbc-12.2.0.jre11.jar
+file.reference.slf4j-api-1.7.36.jar=lib/slf4j-api-1.7.36.jar
+file.reference.sqlite-jdbc-3.46.0.0.jar=lib/sqlite-jdbc-3.46.0.0.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
+    ${file.reference.sqlite-jdbc-3.46.0.0.jar}:\
+    ${file.reference.slf4j-api-1.7.36.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +79,24 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PontoEletronico
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=gui.telaInicial
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
