--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,15 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PontoEletronico
 endorsed.classpath=
 excludes=
-file.reference.slf4j-api-1.7.36.jar=lib/slf4j-api-1.7.36.jar
-file.reference.sqlite-jdbc-3.46.0.0.jar=lib/sqlite-jdbc-3.46.0.0.jar
+file.reference.mysql-connector-j-9.0.0.jar=lib/mysql-connector-j-9.0.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.46.0.0.jar}:\
-    ${file.reference.slf4j-api-1.7.36.jar}
+    ${file.reference.mysql-connector-j-9.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
