tentando listar as datas no combobox

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "/home/gbarrosn/NetBeansProjects/PontoEletronico/lib/mysql-connector-j-9.0.0.jar"
+        "/home/gbarrosn/NetBeansProjects/PontoEletronico/lib/mysql-connector-j-9.0.0.jar",
+        "/home/gbarrosn/SistemaPonto/lib/mysql-connector-j-9.0.0.jar"
     ]
 }
