--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,14 +35,18 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PontoEletronico
 endorsed.classpath=
 excludes=
+file.reference.barcode4j.jar=lib/barcode4j.jar
 file.reference.mysql-connector-j-9.0.0.jar=lib/mysql-connector-j-9.0.0.jar
+file.reference.poi-ooxml-full-5.2.3.jar=lib/poi-ooxml-full-5.2.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.0.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.barcode4j.jar}:\
+    ${file.reference.poi-ooxml-full-5.2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
