adicionando libs para editar excel

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,8 @@ endorsed.classpath=
 excludes=
 file.reference.barcode4j.jar=lib/barcode4j.jar
 file.reference.mysql-connector-j-9.0.0.jar=lib/mysql-connector-j-9.0.0.jar
+file.reference.poi-5.2.3.jar=lib/poi-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar=lib/poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-full-5.2.3.jar=lib/poi-ooxml-full-5.2.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -46,7 +48,9 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-9.0.0.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.barcode4j.jar}:\
-    ${file.reference.poi-ooxml-full-5.2.3.jar}
+    ${file.reference.poi-ooxml-full-5.2.3.jar}:\
+    ${file.reference.poi-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
