--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,21 +36,39 @@ dist.jlink.output=${dist.jlink.dir}/PontoEletronico
 endorsed.classpath=
 excludes=
 file.reference.barcode4j.jar=lib/barcode4j.jar
+file.reference.commons-collections4-4.4.jar=lib/commons-collections4-4.4.jar
+file.reference.commons-compress-1.21.jar=lib/commons-compress-1.21.jar
+file.reference.commons-io-2.11.0.jar=lib/commons-io-2.11.0.jar
+file.reference.log4j-api-2.18.0.jar=lib/log4j-api-2.18.0.jar
+file.reference.log4j-core-2.20.0.jar=lib/log4j-core-2.20.0.jar
 file.reference.mysql-connector-j-9.0.0.jar=lib/mysql-connector-j-9.0.0.jar
 file.reference.poi-5.2.3.jar=lib/poi-5.2.3.jar
+file.reference.poi-ooxml-3.9.jar=lib/poi-ooxml-3.9.jar
 file.reference.poi-ooxml-5.2.3.jar=lib/poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-full-5.2.3.jar=lib/poi-ooxml-full-5.2.3.jar
+file.reference.poi-scratchpad-5.2.3.jar=lib/poi-scratchpad-5.2.3.jar
+file.reference.slf4j-api-1.7.36.jar=lib/slf4j-api-1.7.36.jar
+file.reference.xmlbeans-5.1.1.jar=lib/xmlbeans-5.1.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.0.0.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.barcode4j.jar}:\
-    ${file.reference.poi-ooxml-full-5.2.3.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.log4j-api-2.18.0.jar}:\
+    ${file.reference.log4j-core-2.20.0.jar}:\
+    ${file.reference.mysql-connector-j-9.0.0.jar}:\
     ${file.reference.poi-5.2.3.jar}:\
-    ${file.reference.poi-ooxml-5.2.3.jar}
+    ${file.reference.poi-ooxml-3.9.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-full-5.2.3.jar}:\
+    ${file.reference.poi-scratchpad-5.2.3.jar}:\
+    ${file.reference.slf4j-api-1.7.36.jar}:\
+    ${file.reference.xmlbeans-5.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
