--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,12 +42,13 @@ file.reference.commons-io-2.11.0.jar=lib/commons-io-2.11.0.jar
 file.reference.log4j-api-2.18.0.jar=lib/log4j-api-2.18.0.jar
 file.reference.log4j-core-2.20.0.jar=lib/log4j-core-2.20.0.jar
 file.reference.mysql-connector-j-9.0.0.jar=lib/mysql-connector-j-9.0.0.jar
+file.reference.ooxml-schemas-1.4.jar=lib/ooxml-schemas-1.4.jar
 file.reference.poi-5.2.3.jar=lib/poi-5.2.3.jar
-file.reference.poi-ooxml-3.9.jar=lib/poi-ooxml-3.9.jar
 file.reference.poi-ooxml-5.2.3.jar=lib/poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-full-5.2.3.jar=lib/poi-ooxml-full-5.2.3.jar
 file.reference.poi-scratchpad-5.2.3.jar=lib/poi-scratchpad-5.2.3.jar
 file.reference.slf4j-api-1.7.36.jar=lib/slf4j-api-1.7.36.jar
+file.reference.xmlbeans-3.0.1.jar=lib/xmlbeans-3.0.1.jar
 file.reference.xmlbeans-5.1.1.jar=lib/xmlbeans-5.1.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -63,12 +64,13 @@ javac.classpath=\
     ${file.reference.log4j-core-2.20.0.jar}:\
     ${file.reference.mysql-connector-j-9.0.0.jar}:\
     ${file.reference.poi-5.2.3.jar}:\
-    ${file.reference.poi-ooxml-3.9.jar}:\
     ${file.reference.poi-ooxml-5.2.3.jar}:\
     ${file.reference.poi-ooxml-full-5.2.3.jar}:\
     ${file.reference.poi-scratchpad-5.2.3.jar}:\
     ${file.reference.slf4j-api-1.7.36.jar}:\
-    ${file.reference.xmlbeans-5.1.1.jar}
+    ${file.reference.xmlbeans-5.1.1.jar}:\
+    ${file.reference.ooxml-schemas-1.4.jar}:\
+    ${file.reference.xmlbeans-3.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
