--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.log4j-api-2.18.0.jar=lib/log4j-api-2.18.0.jar
 file.reference.log4j-core-2.20.0.jar=lib/log4j-core-2.20.0.jar
 file.reference.mysql-connector-j-9.0.0.jar=lib/mysql-connector-j-9.0.0.jar
 file.reference.ooxml-schemas-1.4.jar=lib/ooxml-schemas-1.4.jar
+file.reference.pdfbox-app-3.0.3.jar=lib/pdfbox-app-3.0.3.jar
 file.reference.poi-5.2.3.jar=lib/poi-5.2.3.jar
 file.reference.poi-ooxml-5.2.3.jar=lib/poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-full-5.2.3.jar=lib/poi-ooxml-full-5.2.3.jar
@@ -70,7 +71,8 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.36.jar}:\
     ${file.reference.xmlbeans-5.1.1.jar}:\
     ${file.reference.ooxml-schemas-1.4.jar}:\
-    ${file.reference.xmlbeans-3.0.1.jar}
+    ${file.reference.xmlbeans-3.0.1.jar}:\
+    ${file.reference.pdfbox-app-3.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
