--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -15,7 +15,8 @@
         "/home/gbarrosn/SistemaPonto/lib/slf4j-api-1.7.36.jar",
         "/home/gbarrosn/SistemaPonto/lib/xmlbeans-5.1.1.jar",
         "/home/gbarrosn/SistemaPonto/lib/ooxml-schemas-1.4.jar",
-        "/home/gbarrosn/SistemaPonto/lib/xmlbeans-3.0.1.jar"
+        "/home/gbarrosn/SistemaPonto/lib/xmlbeans-3.0.1.jar",
+        "/home/gbarrosn/SistemaPonto/lib/pdfbox-app-3.0.3.jar"
     ],
     "java.project.sourcePaths": [
         "."
