--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.barcode4j.jar=lib/barcode4j.jar
 file.reference.commons-collections4-4.4.jar=lib/commons-collections4-4.4.jar
 file.reference.commons-compress-1.21.jar=lib/commons-compress-1.21.jar
 file.reference.commons-io-2.11.0.jar=lib/commons-io-2.11.0.jar
+file.reference.itextpdf-5.5.9.jar=lib/itextpdf-5.5.9.jar
 file.reference.log4j-api-2.18.0.jar=lib/log4j-api-2.18.0.jar
 file.reference.log4j-core-2.20.0.jar=lib/log4j-core-2.20.0.jar
 file.reference.mysql-connector-j-9.0.0.jar=lib/mysql-connector-j-9.0.0.jar
@@ -72,7 +73,8 @@ javac.classpath=\
     ${file.reference.xmlbeans-5.1.1.jar}:\
     ${file.reference.ooxml-schemas-1.4.jar}:\
     ${file.reference.xmlbeans-3.0.1.jar}:\
-    ${file.reference.pdfbox-app-3.0.3.jar}
+    ${file.reference.pdfbox-app-3.0.3.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
