--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=PontoEletronico
 application.vendor=gbarrosn
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -43,7 +44,6 @@ file.reference.itextpdf-5.5.9.jar=lib/itextpdf-5.5.9.jar
 file.reference.log4j-api-2.18.0.jar=lib/log4j-api-2.18.0.jar
 file.reference.log4j-core-2.20.0.jar=lib/log4j-core-2.20.0.jar
 file.reference.mysql-connector-j-9.0.0.jar=lib/mysql-connector-j-9.0.0.jar
-file.reference.ooxml-schemas-1.4.jar=lib/ooxml-schemas-1.4.jar
 file.reference.pdfbox-app-3.0.3.jar=lib/pdfbox-app-3.0.3.jar
 file.reference.poi-5.2.3.jar=lib/poi-5.2.3.jar
 file.reference.poi-ooxml-5.2.3.jar=lib/poi-ooxml-5.2.3.jar
@@ -71,7 +71,6 @@ javac.classpath=\
     ${file.reference.poi-scratchpad-5.2.3.jar}:\
     ${file.reference.slf4j-api-1.7.36.jar}:\
     ${file.reference.xmlbeans-5.1.1.jar}:\
-    ${file.reference.ooxml-schemas-1.4.jar}:\
     ${file.reference.xmlbeans-3.0.1.jar}:\
     ${file.reference.pdfbox-app-3.0.3.jar}:\
     ${file.reference.itextpdf-5.5.9.jar}
@@ -131,7 +130,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=Zulu_11.0.24_8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
